--- a/Aritmatika.css
+++ b/Aritmatika.css
@@ -1,8 +1,8 @@
 .container {
+    width: auto;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
     margin: 0;
 }
 .perhitungan {
